# hix-image-viewer

./: .gitignore  CMakeLists.txt  README.md  c_cpp_properties.json  communicate.h  main.c  main.cpp  singleton.h
prebuilds/: hix-image-viewer
